tests/ui/endpoint/custom_method_invalid_expr.stderr
error: unexpected token
 --> tests/ui/endpoint/custom_method_invalid_expr.rs:8:21
  |
8 | #[endpoint(method = "I like pizza", uri = "custom_read")]
  |                     ^^^^^^^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/custom_method_invalid_expr.rs:5:12
  |
4 | #[derive(Resource)]
  |                  - help: you might be missing a type parameter: `<read_all___gotham_restful_endpoint>`
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
